--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap'); */
 @import url('http://fonts.cdnfonts.com/css/exo-space');
-@import url('http://fonts.cdnfonts.com/css/cyborg-2'); */
+/* @import url('http://fonts.cdnfonts.com/css/cyborg-2'); */
     * {
         cursor: url(arrow.svg),auto;
         padding: 0;
