--- a/style.css
+++ b/style.css
@@ -1,18 +1,15 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap'); */
-/* @import url('http://fonts.cdnfonts.com/css/exo-space'); */
-/* @import url('http://fonts.cdnfonts.com/css/cyborg-2'); */
 
 @font-face {
     font-family: 'Exo Space';
-    src: url('font/Exo_space.ttf');
+    src: url('./font/Exo_space.ttf');
 }
 @font-face {
     font-family: 'Alfa Slab One';
-    src: url('font/AlfaSlabOne-Regular.ttf');
+    src: url('./font/AlfaSlabOne-Regular.ttf');
 }
 @font-face {
     font-family: 'CYBORG';
-    src: url('font/Cyborg.ttf');
+    src: url('./font/Cyborg.ttf');  
 }
 
 
@@ -25,27 +22,46 @@
         cursor: url(arrow/arrow.svg),auto;
         padding: 0;
         margin: 0;
-        box-sizing: border-box;
+        box-sizing: border-box; 
     }
 
-    .waviy {
+
+
+
+
+
+
+    /* ====================== css for box1 ========================= */
+    /* ====================== css for box1 ========================= */
+
+    .box1 {
+        background-image: linear-gradient(to right bottom,rgba(5,8,16,.6),rgba(5,8,16,.6)),url(image/back.svg);
+        background-position: top;
+        background-size: cover;
+        
+        width: 100%;
+        text-align: center;
+        margin-bottom: 0;
+    }
+
+    .box10 {
         padding-top: 50px;
         -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0,0,0,.2));
         font-size: 40px;
     }
 
-    .waviy span {
+    .box10 span {
         font-family: 'Alfa Slab One';
         display: inline-block;
         color: #fff;
         /* text-transform: uppercase; */
-        animation: waviy 2s infinite;
+        animation: box10 2s infinite;
         animation-delay: calc(.1s * var(--i));
     
     }
 
 
-    @keyframes waviy {
+    @keyframes box10 {
         0%,40%,100% {
             transform: translateY(0)
         }
@@ -54,56 +70,11 @@
         }
     }
 
-
-
-
-
-
-
-
-    .section {
-        background-image: linear-gradient(to right bottom,rgba(5,8,16,.6),rgba(5,8,16,.6)),url(image/back.svg);
-        background-position: top;
-        background-size: cover;
-        height: 100vh;
-        
-        width: 100%;
-        text-align: center;
-    }
-
-    .bg1 {
-        height: 70vh;
-        background-color: black;
-    }
-
-    .bg2 {
-        height: 50vh;
-        background-image: -webkit-linear-gradient(30deg, #171d23 50%, #33383d 50%);height: 70vh;
-    }
-
-    .spacer {
-        height: 50vh;
-        background-color: rgba(0, 0, 0, 0.934);
-    }
-
-    nav{
-        position: sticky;
-        top: 0;
-    }
-
-
-
-
-
-
-
     .box11{
         display: flex;
         margin-top: 80px;
     }
-    /* .box11>div{
-        border: 2px solid red;
-    } */
+
     .box111{
         width: 60%;
         font-family: 'Exo Space';
@@ -123,10 +94,15 @@
         margin-bottom: 20px;
     }
 
+    .btn_div{
+        width: 150px ;
+        margin: auto;
+    }
+
     .rbtn{
         font-family: 'CYBORG';
         background-color: rgb(8,156,8); 
-        padding: .8rem 2.5rem; 
+        padding: .6rem 1.5rem; 
         font-size: 20px;    
         background: #14e956;
         background-color: #14e956;
@@ -134,13 +110,15 @@
         border: none;
         border-radius: 7px;
         box-shadow: 9px 7px 32px -11px rgb(20 233 86 / 74%);
-        font-size: 2.0rem;
+        font-size: 1.5rem;
         font-weight: 900;   
-        transition: all .3s ease-in-out 0s;                 
+        transition: all .3s ease-in-out 0s; 
+        margin-bottom: 50px;  
+        margin-top: 50px;              
     }
 
     .rbtn:hover{
-        border: 2px solid white;
+        border: 6px solid white;
         box-shadow: #14e956 0px 3px 29px 0px;
         
     }
@@ -152,4 +130,204 @@
     .rbtn>a{
         text-decoration: none;
         color: black;
+    }
+
+
+    
+    /* ====================== css for box2 ========================= */
+    /* ====================== css for box2 ========================= */
+
+    .box2{
+        font-family: 'CYBORG';
+        margin-top: 0;
+        height: 70vh;
+        background-color: rgba(0, 0, 0, 0.942);
+        padding-top: 40px;
+    }
+    .box21{
+        width: 140px;
+        margin: auto;
+        text-align: center;
+    }
+
+    .box21>h1{
+        transform: rotate(3.6deg);
+        border-radius: 12px;
+        color: #14e956;
+        border: 4px solid #14e956;
+        text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    }
+
+    .box22{
+        width: 60%;
+        margin: auto;
+        margin-top: 50px;
+        background-color: #0a772d;
+        border-radius: 12px;
+        color: white;
+
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding: 0.7rem;
+        backdrop-filter: blur(5px);
+    }
+
+    .box22>div{
+        align-items: center;
+        text-align: center;
+        background: #021709;
+        border-radius: 8px;
+        display: flex;
+        flex: 0 1 18%;
+        height: 60px;
+        justify-content: space-evenly;
+        margin: 1%;
+        padding: 5px;
+    }
+
+    .box22>div>div>img{
+        max-width: 40px;
+    }
+
+    .tool {
+        animation: wiggle 2s linear infinite;
+        animation-delay: calc(.1s * var(--i));
+      }
+      
+      @keyframes wiggle {
+        0%, 7% {
+          transform: rotateZ(0);
+        }
+        15% {
+          transform: rotateZ(-15deg);
+        }
+        20% {
+          transform: rotateZ(10deg);
+        }
+        25% {
+          transform: rotateZ(-10deg);
+        }
+        30% {
+          transform: rotateZ(6deg);
+        }
+        35% {
+          transform: rotateZ(-4deg);
+        }
+        40%, 100% {
+          transform: rotateZ(0);
+        }
+      }
+      
+      .tool {
+        background: #444;
+        background: linear-gradient(top, #555, #333);
+        border: none;
+        border-top: 3px solid rgb(126, 133, 126);
+        color: #fff;
+        font-size: 1em;
+        transform-origin: 50% 5em;
+      }
+
+
+
+
+    
+
+
+
+
+    /* ====================== css for box3 ========================= */
+    /* ====================== css for box3 ========================= */
+
+    .box3 {
+        height: 50vh;
+        background-image: -webkit-linear-gradient(30deg, #171d23 50%, #33383d 50%);height: 70vh;
+    }
+
+
+
+
+
+
+
+
+
+    /* ====================== css for box4 ========================= */
+    /* ====================== css for box4 ========================= */
+
+    .box4 {
+        height: 50vh;
+        background-color: rgba(0, 0, 0, 0.934);
+    }
+
+    nav{
+        position: sticky;
+        top: 0;
+    }
+
+
+
+
+
+
+
+
+
+    @media screen and (min-width: 200px) and (max-width: 520px) { 
+        .box10>span{
+            font-size: 23px;
+        }
+
+        .wlcm_note{
+            font-size: 20px;
+        }
+
+        .box11{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin-top: 40px;
+        }
+        .box111{
+            width: 90%;
+        }
+        .some_about{
+            font-size: 25px;
+        }
+
+        .box112>img{
+            display: none;
+        }
+
+        .box2{
+            height: 600px;
+        }
+    }
+
+    @media screen and (min-width: 521px) and (max-width: 730px){
+
+        .box10>span{
+            font-size: 28px;
+        }
+
+        .box11{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin-top: 40px;
+        }
+        .box111{
+            width: 85%;
+        }
+
+        .box112>img{
+            display: none;
+        }
+
+        .box2{
+            height: 500px;
+        }
     }
