--- a/style.css
+++ b/style.css
@@ -174,8 +174,7 @@
         margin-top: 50px;
         background-color: #001C55;
         border: 1px solid #989292;
-        /* box-shadow: rgba(0, 0, 0, 0.1) 10px 20px 24px, rgba(0, 0, 0, 0.1) 10px 26px 56px, rgba(0, 0, 0, 0.1) 10px 34px 80px; */
-        box-shadow: rgba(0, 0, 0, 0.784) 0px 22px 70px 4px;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
         border-radius: 12px;
         /* color: white; */
         
@@ -285,9 +284,9 @@
 
     .box32{
         margin-top: 30px;
-        padding: 20px;
+        padding: 50px;
         display: grid;
-        grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+        grid-template-columns: repeat(auto-fill,minmax(370px,1fr));
         gap: 40px;
         background: transparent;
     }
@@ -312,13 +311,62 @@
     /* ====================== css for box4 ========================= */
 
     .box4 {
-        height: 50vh;
+        padding: 40px;
+        font-family: 'CYBORG';
+        color: #001C55;
+    }
+    .box41{
+        width: 190px;
+        /* margin: auto; */
+        text-align: center;  
+    }
+    .box41>h1{
+        padding: 5px;
+        transform: rotate(-3.6deg);
+        border-radius: 12px;
+        color: #001C55;
+        border: 4px solid #001C55;
+        font-weight: bolder;
     }
 
-    nav{
-        position: sticky;
-        top: 0;
+    .skills-list{
+        display: grid;
+        grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+        grid-gap: 40px;
+        margin-top: 50px;
     }
+    .skills-list div{
+        background : #E0E0E0;
+        padding: 40px;
+        font-size: 13px;
+        font-weight: 300;
+        border-radius: 10px;
+        transition: background 0.5s,transform 0.5s;
+    }
+    .skills-list div i{
+        font-size: 50px;
+        margin-bottom: 30px;
+    }
+    .skills-list div h2{
+        font-size: 20px;
+        font-weight: bold;
+        margin-bottom: 15px;
+    }
+    .skills-list div:hover{
+        background: #001C55;
+        color: #E0E0E0;
+        transform: translateY(-10px);
+    }
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -400,8 +448,8 @@
 
     .flip-card {
         background-color: transparent;
-        width: 300px;
-        height: 200px;
+        width: 370px;
+        height: 245px;
         border: 1px solid #001C55;
         perspective: 1000px; /* Remove this if you don't want the 3D effect */
       }
@@ -446,10 +494,28 @@
         border: 2px solid #001C55;
       }
 
+      .flip-card-back>h1+p{
+        padding: 15px;
+      }
 
-        /* body {
-            background: #eee;
-        } */
+      .icons>a>i{
+        color: white;
+        padding: 10px 10px;
+        background: #001C55;
+        border-radius: 50%;
+      }
+      .icons{
+        margin-top: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 30px;
+      }
+      /* .flip-card-back>p:nth-child(2){
+        margin-bottom: 10px;
+      } */
+
+
 
         /* ====hanging animation======= */
 .swing {
