--- a/style.css
+++ b/style.css
@@ -15,21 +15,54 @@
 
 
     * {
-        /* cursor: url(arrow/arrow.svg),auto; */
         cursor: url(arrow/gray24.png),auto;
         padding: 0;
         margin: 0;
         box-sizing: border-box; 
     }
 
+    html {
+        scroll-behavior: smooth;
+    }
+
     a{
-        /* cursor: url(arrow/hand26.png),auto;  */
         text-decoration: none;
-        /* color: white; */
     }
     ::-webkit-scrollbar {
         display: none;
     }
+
+
+
+/* =====scroll bar======= */
+    .header {
+        position: fixed;
+        top: 0;
+        z-index: 1;
+        width: 100%;
+    }
+
+    .progress-bar {
+        height: 10px;
+        background: #001C55;
+        width: 0%;
+    }
+
+
+
+/* ========smooth scroll up========== */
+    .reveal{
+        position: relative;
+        transform: translateY(150px);
+        opacity: 0;
+        transition: 1s all ease;
+    }
+      
+    .reveal.active{
+        transform: translateY(0);
+        opacity: 1;
+    }
+
 
 
     /* ====================== css for box0 ========================= */
@@ -100,6 +133,9 @@
         cursor: url(arrow/h30.png),auto;
         position: relative;
     }
+    .tab-links:hover{
+        color: #72351C;
+    }
     .tab-links::after{
         content: '';
         width: 0;
@@ -145,19 +181,13 @@
     
 
 
-
-
-
-
-
-
     /* ====================== css for box1 ========================= */
     /* ====================== css for box1 ========================= */
 
     .box1 {
         width: 100%;
         text-align: center;
-        margin-bottom: -20px;
+        margin-bottom: 0;
     }
 
     .box10 {
@@ -212,7 +242,7 @@
 
     .btn_div{
         width: fit-content;
-        /* margin: auto; */
+        margin: auto;
     }
 
     .rbtn{
@@ -348,12 +378,6 @@
       }
       
       
-
-
-
-
-    
-
 
 
 
@@ -529,7 +553,7 @@
         color: #001C55;
     }
     .box41{
-        width: 190px;
+        width: fit-content;
         margin: auto;
         text-align: center;  
     }
@@ -573,9 +597,93 @@
 
 
 
-
+/* ====================== css for box5 ========================= */
+/* ====================== css for box5 ========================= */
     .box5{
-        height: 400px;
+        font-family: 'Exo Space';
+        width: 100%;
+        /* margin: auto; */
+        padding: 20px 40px;
+        background-color: #E0E0E0;
+    }
+    .box51{
+        width: fit-content;
+        margin: auto;
+        /* text-align: center;   */
+    }
+    .box51>h1{
+        padding: 5px;
+        transform: rotate(-3.6deg);
+        border-radius: 12px;
+        color: #001C55;
+        border: 4px solid #001C55;
+        font-weight: bolder;
+    }
+    .box52{
+        display: flex;
+        margin-top: 10px;
+    }
+    .box511{
+        padding: 30px;
+    }
+    .box5111{
+        margin-top: 10px;
+        /* text-align: center; */
+    }
+    .box5112{
+        display: flex; 
+        gap: 20px;
+        margin-top: 20px;
+        /* justify-content: center; */
+    }
+    .ico>a>i{
+        color: white;
+        padding: 10px;
+        background: #001C55;
+        border-radius: 50%;
+      }
+
+      .box512{
+        text-align: center;
+        margin: auto;
+      }
+
+    .img51{
+        max-width: 200px;
+        max-height: 200px;
+        border-radius: 50%;
+        border: 4px solid #72351C;
+    }
+    .box5h1{
+        color: #001C55;
+        font-size: 35px;
+        /* text-align: center; */
+    }
+    .box5h3{
+        color: #535461;
+        margin-top: 20px;
+    }
+
+
+
+    
+/* ====================== css for box6 ========================= */
+
+    .box6{
+        font-family: 'Exo Space';
+        padding: 20px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background: #535461;
+        color: white;
+        font-size: 20px;
+        line-height: 1.2;
+    }
+    .fa-sharp{
+        color: red;
     }
 
 
@@ -629,6 +737,17 @@
         .box01{
             margin-bottom: 0;
         }
+        .box6{
+            font-size: 16px;
+        }
+        .box52{
+            flex-direction:column-reverse;
+        }
+        .box511 {
+            padding: 0px;
+            margin-top: 17px;
+        }
+
     }
 
     @media screen and (min-width: 400px) and (max-width: 520px) { 
@@ -666,7 +785,24 @@
         .box3{
             padding: 5px;
         }
+        .box6{
+            font-size: 18px;
+        }
+        .box52{
+            flex-direction:column-reverse;
+        }
+        .box511 {
+            padding: 0px;
+            margin-top: 17px;
+        }
 
+    }
+
+    .arrup{
+        position: fixed; 
+        bottom: 20px; 
+        right: 30px; 
+        color: #72351C;
     }
 
     @media screen and (min-width: 521px) and (max-width: 730px){
@@ -695,6 +831,9 @@
         }
         .box22{
             width: 85%;
+        }
+        .box52{
+            flex-direction:column-reverse;
         }
 
     }
