--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 /* =====scroll bar======= */
     .header {
         position: fixed;
-        top: 0;
+        top: 50px;
         z-index: 1;
         width: 100%;
     }
@@ -70,7 +70,7 @@
 
     .box0{
         /* background-color: #E0E0E0; */
-        padding: 0 30px;
+        padding: 30px;
         font-family: 'Exo Space';
         /* font-family: 'CYBORG'; */
     }
@@ -187,7 +187,8 @@
     .box1 {
         width: 100%;
         text-align: center;
-        margin-bottom: 0;
+        margin-top: 70px;
+        /* margin-bottom: 0; */
     }
 
     .box10 {
@@ -218,7 +219,7 @@
 
     .box11{
         display: flex;
-        margin-top: 10px;
+        margin-top: 50px;
     }
 
     .box111{
